Restore support for Java 8 (#767)
* Restore support for Java 8

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

* Address code review comments (update compatibility)

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

---------

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>